# chassis_optimizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md  spec.md  tasks.md  workflow.md
examples/: study_minimal.yaml
scripts/: bootstrap_venv.py
src/chassis_optimizer/: __init__.py  __main__.py
src/chassis_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/chassis_optimizer/app/: __init__.py  config.py  ports.py
src/chassis_optimizer/cli/: __init__.py  main.py
src/chassis_optimizer/domain/: __init__.py  models.py
src/chassis_optimizer/infrastructure/: __init__.py  yaml_config_loader.py
src/chassis_optimizer/services/: __init__.py  geometry_service.py  study_service.py
tests/: conftest.py  test_cli.py  test_config_loader.py  test_geometry_models.py  test_geometry_service.py
